load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    # importpath = "github.com/adobe/rules_gitops/stamper",
    # deps = ["//templating/fasttemplate:go_default_library"],
)

go_binary(
    name = "simple_go_bin_app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
