load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//:__subpackages__"])

js_binary(
    name = "my_app",
    data = [
        "src/file1.json",
        "src/file22.json",
        ":node_modules/cowsay",
    ],
    entry_point = "src/index.js",
)
