load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//:__subpackages__"])

js_library(
    name = "simple_js_library_test",
    srcs = [
        "index.js",
        "package.json",
    ],
    deps = [
        ":node_modules/cowsay",
    ],
)

js_binary(
    name = "simple-js-library-test",
    data = [
        ":simple_js_library_test",
    ],
    entry_point = "index.js",
)
