load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

package(default_visibility = ["//:__subpackages__"])

prettier.prettier_binary(
    name = "prettier",
    # Include this js_library and its dependencies in the runfiles (runtime dependencies)
    data = ["//:prettierrc"],
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
    fixed_args = [
        # `require` statements in the config file will be resolved relative to its location
        # Therefore to make it hermetic, prettier must be pointed at the copy of the config file
        # in the runfiles folder rather than the one in the source folder.
        "--config=\"$$JS_BINARY__RUNFILES\"/$(rlocationpath //:prettierrc)",
        # default log level is "log" which spams on success
        # https://prettier.io/docs/en/cli.html#--log-level
        # NB: prettier 2 names this loglevel, in prettier 3 it's renamed log-level, see
        # https://prettier.io/blog/2023/07/05/3.0.0.html#cli-1
        "--loglevel=warn",
    ],
)

format_multirun(
    name = "format",
    css = ":prettier",
    html = ":prettier",
    javascript = ":prettier",
    markdown = ":prettier",
    python = "@aspect_rules_lint//format:ruff",
    sql = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
    yaml = "@aspect_rules_lint//format:yamlfmt",

    # Other languages...

    # # cuda = "@llvm_toolchain_llvm//:bin/clang-format",
    # # # You can use standard gofmt instead of stricter gofumpt:
    # # # go = "@go_sdk//:bin/gofmt",
    # # go = "@aspect_rules_lint//format:gofumpt",
    # graphql = ":prettier",
    # html = ":prettier",
    # # java = ":java-format",
    # javascript = ":prettier",
    # # jsonnet = "@aspect_rules_lint//format:jsonnetfmt",
    # # kotlin = ":ktfmt",
    # markdown = ":prettier",
    # # protocol_buffer = "//tools/lint:buf",
    # python = "@aspect_rules_lint//format:ruff",
    # # # Note, older rules_rust versions may need
    # # # @rules_rust//tools/rustfmt:upstream_rustfmt
    # # # which was later deprecated in
    # # # https://github.com/bazelbuild/rules_rust/pull/2703
    # # rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    # # scala = ":scalafmt",
    # shell = "@aspect_rules_lint//format:shfmt",
    # sql = ":prettier",
    # starlark = "@buildifier_prebuilt//:buildifier",
    # # swift = ":swiftformat",
    # # terraform = "@aspect_rules_lint//format:terraform",
    # visibility = ["//:__subpackages__"],
    # yaml = "@aspect_rules_lint//format:yamlfmt",
)
