load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//:stylelint/package_json.bzl", stylelint_bin = "bin")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//:__subpackages__"])

# ESlint binary
# Note-1: test it by running: `$ bazel run //tools/lint:eslint -- --help`)
# Note-2: run individual target: `$ bazel lint experimental/service_test_ts_rspack_react_tests_assets_swc/...`
eslint_bin.eslint_binary(
    name = "eslint",
    env = {
        "ESLINT_USE_FLAT_CONFIG": "true",
        # "ESLINT_DEBUG": "true",
        # "DEBUG": "eslint:*",
        # "NODE_PATH": "./node_modules",
    },
)

# Stylelint binary
# Note: test it by running `$ bazel run //tools/lint:stylelint -- --help`)
stylelint_bin.stylelint_binary(
    name = "stylelint",
)

# Flake8 binary
# Note: test it by running `$ bazel run //tools/lint:flake8 -- --help`)
py_console_script_binary(
    name = "flake8",
    pkg = "@pypi//flake8:pkg",
)
