load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//:__subpackages__"])

copy_to_bin(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//:__subpackages__"],
)

js_library(
    name = "mocha_test_lib",
    srcs = [
        "scripts/mocha-test.mjs",
    ],
    deps = [
        ":node_modules/dotenv",
        ":node_modules/mocha",
        ":node_modules/source-map-support",
    ],
)

js_library(
    name = "eslintrc",
    srcs = [
        ".eslintrc.cjs",
    ],
)
